--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "node ./node_modules/lightningcss/install.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.7",
@@ -41,6 +42,6 @@
     "globals": "^16.0.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "typescript-eslint": "^8.30.1"
-  }
+    "typescript-eslint": "^8.30.1"
+  }
 }
