--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "globals": "^16.0.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "typescript-eslint": "^8.30.1"
-  }
+    "typescript-eslint":"^8.30.1",
+  },
 }
