--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.2",
+    "lightningcss": "^1.29.3",
     "lucide-react": "^0.488.0",
     "mysql2": "^3.14.0",
     "next": "^15.3.0",
@@ -42,6 +43,6 @@
     "globals": "^16.0.0",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "typescript-eslint":"^8.30.1"
+    "typescript-eslint": "^8.30.1"
   }
 }
