--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "node ./node_modules/lightningcss/install.js"
+    "postinstall": "npx lightningcss"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.7",
